<resources>
    <string name="app_name">Wisnu</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="login">MASUK</string>
    <string name="register">DAFTAR</string>
    <string name="forget_password">Lupa Kata Sandi?</string>
    <string name="change_information">Ubah Informasi</string>
    <string name="send">KIRIM</string>
    <string name="next">LANJUT</string>
    <string name="skip">Lewati</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="title_login">Selamat datang kembali 👐🏻</string>
    <string name="title_forgot_password">Pemulihan akun 🛠️</string>
    <string name="description_forgot_password">Kami akan kirimkan email untuk mengatur ulang kata sandi kamu.</string>
    <string name="title_register_name">Mari berkeliling\nIndonesia 🇮🇩</string>
    <string name="description_register_name">Kenalan, yuk!</string>
    <string name="title_register_email">Hai,\n%1$s 👋🏻</string>
    <string name="description_register_email">Hubungin kamu kemana nih?</string>
    <string name="title_register_password">Masukin\nkata sandi 🔐</string>
    <string name="description_register_password">Kata sandi ini digunakan untuk masuk ke akunmu.</string>
    <string name="title_register_referensi">Punya\npreferensi? 🤔</string>
    <string name="description_register_referensi">Wisnu akan merekomendasikan tempat yang mungkin kamu sukai.</string>
    <string name="title_register_check">Cek\nkembali 📝</string>
    <string name="description_register_check">Informasi kamu sudah benar?</string>
    <string name="name">Nama Kamu</string>
    <string name="no_telp">Nomor Telepon</string>
    <string name="referensi">Referensi</string>
    <string name="state_data_empty_title">Sepertinya masih kosong...</string>
    <string name="state_data_empty_subtitle">Belum ada informasinya nih. \nCari yang lain yuk?</string>
    <string name="state_error_title">Waduh, ada yang salah.</string>
    <string name="state_error_subtitle">Wisnu coba perbaiki.\nKamu lihat yang lain dulu ya</string>
    <string name="tab_home">Beranda</string>
    <string name="tab_search">Pencarian</string>
    <string name="tab_ticket">Tiket</string>
    <string name="tab_order">Pemesanan</string>
    <string name="tab_account">Akun</string>
    <string name="action_try_again">COBA LAGI</string>
    <string name="action_loading">Memuat...</string>
    <string name="password">Kata sandi</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="ada_event_nih">Ada Event, Nih~</string>
    <string name="action_all">Lihat semua</string>
    <string name="top_city">Kota paling ramai</string>
    <string name="placeholder_search">Mau kemana?</string>
    <string name="top_destination">Destinasi paling TOP</string>
    <string name="search_result_query">Hasil pencarian %1$s</string>
    <string name="active_ticket">Tiket Aktif</string>
    <string name="expired_ticket">Tiket Non-Aktif</string>
    <string name="page_ticktet_detail">Detail Tiket</string>
    <string name="action_see_ticket">LIHAT TIKET</string>
    <string name="ticket_date">Tanggal Tiket</string>
    <string name="adult">Dewasa</string>
    <string name="child">Anak-anak</string>
    <string name="total_price">Total Harga</string>
    <string name="ticket_information">Informasi Tiket</string>
    <string name="ticket_information_value">Tampilkan tiket kamu pada gerbang pemeriksaan tiket. Pastikan tiket kamu sesuai dengan detail pemesanan. Kesalahan dalam pembelian tidak ditanggung oleh Wisnu.</string>
    <string name="all_order">Semua</string>
    <string name="ticket_order">Tiket</string>
    <string name="guide_order">TemanWisnu</string>
    <string name="trip_package">Paket Perjalanan</string>
    <string name="trip_guide">Jasa TemanWisnu</string>
    <string name="trip_ticket">Pembelian Tiket</string>
    <string name="order_date">Tanggal Transaksi</string>
    <string name="page_order_detail">Detail Transaksi\n</string>
    <string name="teman_wisnu">TemanWisnu</string>
    <string name="travel_destination">Destinasi Wisata</string>
    <string name="action_contact_guide">HUBUNGI TEMANWISNU</string>
    <string name="join_date">Jalan-jalan bersama sejak %1$s</string>
    <string name="my_trip">Perjalananku</string>
    <string name="page_list_trip">Perjalananku</string>
    <string name="day_num">Hari ke-%1$s</string>
    <string name="recommendation">Rekomendasi Buat Kamu</string>

    <string name="vr_enabled">Sekarang, kamu bisa berkeliling secara online menggunakan VR di Aplikasi Wisnu.</string>
    <string name="new_info">Ada yang baru!</string>
    <string name="gallery">Galeri</string>
    <string name="from_wisnu">Dari Tim Wisnu</string>
    <string name="from_visitor">Dari pengunjung</string>
    <string name="vr_viewer">VR Viewer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="durasi_perjalanan">Durasi \nPerjalanan</string>
    <string name="card_description_duration">1 durasi sama dengan 60 menit.</string>
    <string name="virtual_account">Virtual Account</string>
    <string name="bank_name">Bank Citayam Jaya (0010)</string>
    <string name="penerima">Penerima</string>
    <string name="image">image</string>
    <string name="biaya_aplikasi">Biaya Aplikasi</string>
    <string name="jasa_temanwisnu">Jasa TemanWisnu</string>
    <string name="tiket_masuk">Tiket Masuk</string>
    <string name="rincian_transaksi">Rincian Transaksi</string>
    <string name="detail_transaction">Detail Transaction</string>
    <string name="lanjut">LANJUT</string>
    <string name="lewati">Lewati</string>
    <string name="aku_pergi_sendiri">Aku Pergi Sendiri</string>
    <string name="buat_transaksi">Buat\nTransaksi</string>
    <string name="tiket_kamu_diatur_wisnu">Tiket kamu diatur Wisnu.</string>
    <string name="guide_selection_transaction">Kamu akan ditemani %1$s</string>
    <string name="simpan_perjalanan">Simpan\nperjalanan</string>
    <string name="kamu_dapat_melihat_perjalanan_yang_disimpan_pada_menu_akun">Kamu dapat melihat perjalanan yang\ndisimpan pada menu akun.</string>
    <string name="simpan">SIMPAN</string>
    <string name="title_destination">Asik,\nke %1$s!</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="new_plan">RENCANAKAN</string>
    <string name="title_the_story">Ceritanya</string>
    <string name="title_event_date">Tanggal Event</string>
    <string name="events">Events</string>
    <string name="cities">Kota</string>
    <string name="destination">Destinasi</string>
    <string name="action_skip">Lewati</string>
    <string name="action_next">Lanjut</string>
    <string name="action_travel_alone">Aku Pergi Sendiri</string>
    <string name="action_plan">RENCANAKAN</string>
    <string name="action_finish">SELESAI</string>
    <string name="action_save">SIMPAN</string>
    <string name="title_transaction_finish">Selesaikan\nPembayaran</string>
    <string name="title_transaction_finish_description">Batas waktu pembayaran 1 jam dari transaksi dibuat.</string>
    <string name="login_fail_check">Login gagal. Periksa kembali email dan password kamu.</string>
    <string name="register_fail_check">Pendaftaran gagal. Periksa kembali data pendaftaran kamu.</string>
    <string name="action_logout">Logout</string>
    <string name="title_logout_question">Keluar dari akun?</string>
    <string name="action_logout_confirm">Ya, keluar</string>
    <string name="action_no">Tidak</string>
    <string name="title_logout_explanation">Semua informasi yang belum disimpan akan hilang dan kamu perlu masuk kembali.</string>
</resources>