<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/tab_home" />

    <item
        android:id="@+id/search_fragment"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/tab_search" />

    <item
        android:id="@+id/ticket_list_fragment"
        android:icon="@drawable/baseline_confirmation_number_24"
        android:title="@string/tab_ticket" />

    <item
        android:id="@+id/order_list_fragment"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/tab_order" />

    <item
        android:id="@+id/account_fragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/tab_account" />
</menu>