<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_wisnu_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wisnu_error" />

    <TextView
        android:id="@+id/state_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/state_error_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/image_wisnu_error"
        app:layout_constraintStart_toStartOf="@+id/image_wisnu_error"
        app:layout_constraintTop_toBottomOf="@+id/image_wisnu_error" />

    <TextView
        android:id="@+id/state_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/playfair_display_medium"
        android:text="@string/state_error_subtitle"
        android:textAlignment="center"
        android:textColor="@color/black_75"
        app:layout_constraintEnd_toEndOf="@+id/state_title"
        app:layout_constraintStart_toStartOf="@+id/state_title"
        app:layout_constraintTop_toBottomOf="@+id/state_title" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/action_try_again"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state_subtitle" />
</androidx.constraintlayout.widget.ConstraintLayout>