<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_order_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:singleSelection="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WisnuChip"
            android:textAppearance="@style/WisnuChip"
            tools:checked="true"
            android:text="@string/all_order" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WisnuChip"
            android:textAppearance="@style/WisnuChip"
            tools:checked="false"
            android:text="@string/ticket_order" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WisnuChip"
            android:textAppearance="@style/WisnuChip"
            tools:checked="false"
            android:text="@string/guide_order" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_orders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/chip_order_filter"
        app:layout_constraintStart_toStartOf="@+id/chip_order_filter"
        app:layout_constraintTop_toBottomOf="@+id/chip_order_filter"
        tools:itemCount="5"
        tools:listitem="@layout/item_order" />
</androidx.constraintlayout.widget.ConstraintLayout>