<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".ui.itinerary.transaction.payment.PaymentFragment">
    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_transaction"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/id_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id"
        android:fontFamily="@font/playfair_display_bold"
        android:textSize="20sp"
        tools:text="WSNU-TC-TW-TSCI-001"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/attach_money"
                android:contentDescription="@string/image" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/icon"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                android:text="@string/virtual_account"
                />
            <TextView
                android:id="@+id/bank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:text="@string/bank_name"
                />
            <TextView
                android:id="@+id/bank_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bank_name"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                tools:text="1234 45 23"
                />
            <TextView
                android:id="@+id/recipient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bank_number"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:text="@string/penerima"
                />
            <TextView
                android:id="@+id/recipient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipient"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                tools:text="1234 45 23"
                />
            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipient_name"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:text="@string/penerima"
                />
            <TextView
                android:id="@+id/total_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                tools:text="1234 45 23"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>